--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
         </section>
         <section class="listContainer">
             <div class="listTitle">
-                <h1>To Do List</h1>
+                <h1 tabindex="0">To Do List</h1>
                 <button id="clearItems" class="button" title="Clear the list" aria-label="Remove all items from the list" tabindex="0">Clear</button>
-                
             </div>
             <hr />
             <div id="listItems">
@@ -35,6 +34,7 @@
                     <label for="2" >sleep</label>
                 </div>  -->
             </div>
+            <p id="confirmation" class="confirmation" aria-live="assertive"></p>
         </section>
     </main>
 </body>
